# Prova2_python_andre

./: .gitignore  README.md  pyproject.toml  setup.py
src/est-numpy-awm/: __init__.py
src/est_numpy_awm/: __init__.py  funcoes.py
tests/: test_functions.py
